reports/l21/artifacts/wave128_sb_core_rule_action_tests_check.txt
   Compiling sb-config v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/crates/sb-config)
   Compiling sb-core v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/crates/sb-core)
error[E0063]: missing field `quic_ech_mode` in initializer of `ExperimentalIR`
   --> crates/sb-core/tests/router_options_parity.rs:107:28
    |
107 |         experimental: Some(ExperimentalIR {
    |                            ^^^^^^^^^^^^^^ missing `quic_ech_mode`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `sb-core` (test "router_options_parity") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
